syntax = "proto3";

message GetProfileResponse {
  User user = 1;
}

message UpdateProfileRequest {
  optional string status = 1;
  optional string language = 2;
  optional string color = 3;
  optional string theme = 4;
}

message User {
  int32 id = 1;
  BasicInfo basic_info = 2;
  UserSettings user_settings = 3;
}

message BasicInfo {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
}

message UserSettings {
  string status = 1;
  string language = 2;
  string color = 3;
  string theme = 4;
}

message SearchUserRequest {
  BasicInfo basic_info = 1;
}

message SearchUserResponse {
  repeated User users = 1;
}