syntax = "proto3";

message CreateClassRequest {
  string class_name = 1;
  string class_desc = 2;
  string timestamp = 3;
}

message GetClassesResponse {
  repeated GetClassResponse responses = 1;
}

message GetClassResponse {
  int32 id = 1;
  string class_name = 2;
  string class_desc = 3;
  string role = 4;
  bool archived = 5;
  string created_at = 6;
}

message AddMemberRequest {
  int32 member_id = 1;
}

message GetMembersResponse {
  repeated ClassroomMember class_members= 1;
}
message ClassroomMember {
  int32 id = 1;
  string first_name = 2;
  string last_name = 3;
  string role = 4;
}

message UpdateMemberRoleRequest {
  string role = 1;
}

message UpdateClassRequest {
  string class_name = 1;
  string class_desc = 2;
  bool archived = 3;
}