syntax = "proto3";

message Task {
  int32 id = 1;
  int32 projectId = 2;
  string title = 3;
  string description = 4;
  string color = 5;
}

message Subtask {
  int32 id = 1;
  int32 task_id = 2;
  string title = 3;
  string description = 4;
  string status = 5;
  string priority = 6;
  string start = 7;
  string end = 8;
}

message Comment {
  int32 id = 1;
  int32 subtask_id = 2;
  int32 user_id = 3;
  string comment = 4;
  string created_date = 5;
}

// TASKS Reqs
message CreateTaskRequest {
  string title = 1;
  string description = 2;
  string color = 3;
}

message CreateTaskResponse {
  int32 id = 1;
}

message GetTaskResponse {
  Task task = 1;
}

message GetTasksResponse {
  repeated Task tasks = 1;
}

message UpdateTaskRequest {
  optional string title = 3;
  optional string description = 4;
  optional string color = 5;
}

// Subtasks Reqs
message CreateSubtaskRequest {
  string title = 1;
  string description = 2;
  string status = 3;
  string priority = 4;
  string start = 5;
  string end = 6;
}

message CreateSubtaskResponse {
  int32 id = 1;
}

message GetSubtaskResponse {
  Subtask subtask = 1;
  repeated int32 assignee_ids = 2;
}

message GetSubtasksResponse {
  repeated GetSubtaskResponse subtaskResponses = 1;
}

message UpdateSubtaskRequest {
  optional int32 task_id = 1;
  optional string title = 2;
  optional string description = 3;
  optional string status = 4;
  optional string priority = 5;
  optional string start = 6;
  optional string end = 7;
}

message AssignMultipleToSubtaskRequest {
  repeated int32 user_ids = 1;
}

message UnassignMultipleToSubtaskRequest {
  repeated int32 user_ids = 1;
}

message MarkAllSubtasksRequest {
  bool done = 1;
}

// Comments
message CreateCommentRequest {
  string comment = 1;
  string created_date = 2;
}

message CreateCommentResponse {
  int32 id = 1;
}

message GetCommentResponse {
  Comment comment = 1;
}

message GetCommentsResponse {
  repeated Comment comments = 2;
}

message UpdateCommentRequest {
  string comment = 1;
}

message ProjectGroup {
  string project_name = 1;
  repeated string students = 2;
}

message BatchCreateRequest {
  repeated ProjectGroup projects = 1;
  string created_at = 2;
}